Implementação de bloqueio e cancelamento em massa